@@ -1,3 +1,8 @@
+2006-10-04  Matt Rice  <ratmice@gmail.com>
+
+	* Palettes/3Menus/GormTableViewEditor.m: Start a connection when
+	control-mousing the selected table column.
+
 2006-12-03 19:54-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormDocument.h: Change declaration for window member 
